Update to use "config/navy.yml" and abstract Notifier and Logger

--- a/tests/src/Fixtures/HookAwarePlugin/Resources/services.yml
+++ b/tests/src/Fixtures/HookAwarePlugin/Resources/services.yml
@@ -1,6 +1,8 @@
 services:
   test_hook_aware.hook.foo:
     class: Navy\Fixtures\HookAwarePlugin\Hook\FooHook
+    arguments:
+      - %hookaware.foo%
 
   test_hook_aware.hook.bar:
     class: Navy\Fixtures\HookAwarePlugin\Hook\BarHook
